:sparkles: Empty update page checked
