# APIServer/Areas/Content/Models/History.cs
@@ -1,0 +1,19 @@
+﻿using System;
+using System.Collections.Generic;
+using System.ComponentModel.DataAnnotations;
+using System.Linq;
+using System.Threading.Tasks;
+
+namespace APIServer.Areas.Content.Models
+{
+    // "[Required]" is used because ASP OpenAPI doesn't seem to support NRT (the question mark thing) yet.
+    public class History
+    {
+        [Required]
+        public int Year { get; set; }
+        [Required]
+        public int Month { get; set; }
+        [Required]
+        public int Count { get; set; }
+    }
+}
